<resources>
    <string name="app_name">MyNews</string>

    <string name="navigation_drawer_open">Open categories</string>
    <string name="navigation_drawer_close">Close categories</string>

    <string name="category_top_stories">Top Stories</string>
    <string name="category_most_popular">Most Popular</string>
    <string name="category_arts">Arts</string>
    <string name="category_business">Business</string>
    <string name="category_politics">Politics</string>
    <string name="category_travel">Travel</string>

    <string name="toolbar_menu_search">Search</string>
    <string name="toolbar_menu_notifications">Notifications</string>
    <string name="toolbar_menu_help">Help</string>
    <string name="toolbar_menu_about">About</string>

    <string name="no_internet">No internet connection detected</string>
    <string name="no_article_found">No article found</string>

    <string name="search_field_hint">Search query term</string>
    <string name="search_date_begin">Begin Date</string>
    <string name="search_date_end">End Date</string>
    <string name="search_button">SEARCH</string>

    <string name="notifications_switch">Enable notifications (once per day)</string>

    <string name="verification_search_field">You must enter a term to search for</string>
    <string name="verification_checkbox">You must select at least  one category</string>
    <string name="verification_dates">"Begin Date" must be before "End Date"</string>

    <string name="new_york_times_dns">https://www.nytimes.com/</string>

    <string name="help_intro_title">MyNews</string>
    <string name="help_intro_text">This app gets you news articles from the New York Times using the website\'s API. There are 6 categories of articles to choose from, you can search for specific topics using the search functionality and get notified once a day if articles talking about a specific topic gets published on the website.\nPlease note that your device must be connected to the internet for the app to work.</string>
    <string name="help_main_title">Main page</string>
    <string name="help_main_text">The articles are divided into 6 categories: Top Stories, Most Popular, Arts, Business, Politics and Travel. You can switch categories by swiping right/left, clicking the corresponding tab or using the drawer menu. Just click an article on the list to read it.</string>
    <string name="help_search_title">Search Page</string>
    <string name="help_search_text">Here you can search for a specific topic by entering a term to search for and at least one category. You can also choose to search for articles published before/after/between a specific date.</string>
    <string name="help_notifications_title">Notifications Page</string>
    <string name="help_notifications_text">You can choose to receive notifications once a day about a specific topic. Like the search functionality, you must enter a term to look for and at least one category. If you decide to change the term or a category while the notifications are on, the notifications will be disabled, so make sure to turn them back on by clicking the switch.</string>

    <string name="about">MyNews\n\nThis app was made by Alban Fontaine</string>
</resources>
