<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/toolbar_menu_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/toolbar_notifications"
        android:title="@string/toolbar_menu_notifications"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/toolbar_help"
        android:title="@string/toolbar_menu_help"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/toolbar_about"
        android:title="@string/toolbar_menu_about"
        app:showAsAction="never"
        />

</menu>