<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controllers.HelpActivity"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/help_intro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/help_intro_title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/help_intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_intro_text"
            android:layout_marginBottom="15dp"/>


        <TextView
            android:id="@+id/help_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/help_main_title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/help_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/help_main_text" />

        <TextView
            android:id="@+id/help_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/help_search_title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/help_search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_search_text"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/help_notifications_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/help_notifications_title"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/help_notifications_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_notifications_text"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</ScrollView>